--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.13.1",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-select": "^5.2.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
