--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-select": "^5.2.2",
