--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@testing-library/react": "^13.0.1",
     "@types/react-modal": "^3.13.1",
     "axios": "^0.26.1",
     "react": "^17.0.2",
